test/good/simple_not.m_
begin

input i;
write i;

if i then write 0
     else write 1;

end
